<resources>
    <string name="app_name">TravelCompanion</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="entrer_mot_de_passe">entrer un mot de passe</string>
    <string name="entrer_rep_mot_de_passe">entrer une seconde fois un mot de passe</string>
    <string name="title_activity_navigation">navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_retour">retour</string>
    <string name="title_switch_proximité"> Voici les objectifs touristiques à proximité</string>
    <string name="title_switch_suggestion">Voici les objectifs touristiques qu\'on vous suggère</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_profile">profil</string>
    <string name="title_activity_settings">Settings</string>
    <string name="error_connection">login ou le mot de passe est incorrect</string>
    <string name="mot_de_pass_non_identique">Les mots de passe saisis ne sont pas identiques</string>
    <string name="not_email">le champ email n\'est pas valide</string>

    <string name="mail_exite">ce mail existe déjà</string>


    <string name="user">Utilisateur</string>
    <string name="note">Noter</string>
    <string name="fermer">Fermer</string>
    <string name="donner_note">Voulez-vous noter ce monument</string>
    <string name="modifier">Modifier</string>
    <string name="title_popup_edit">Vous pouvez modifier</string>


    <!-- Type de ApliMonument -->
    <string name="type_musee">Musée</string>
    <string name="type_eglise">Eglise</string>
    <string name="type_parc_attraction">Parc D\'attraction</string>
    <string name="type_jardin">Jardin</string>
    <string name="type_chateau">Chateau</string>
    <string name="type_parc">Parc</string>
    <string name="type_immeuble">Immeuble</string>
    <string name="type_hotel">Hotel</string>
    <string name="type_auberge">Auberge</string>
    <string name="type_socle">Socle</string>
    <string name="type_maison">Maison</string>
    <string name="type_caves">Caves</string>
    <string name="type_pavillon">Pavillon</string>
    <string name="type_villa">Villa</string>





    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_preferences">Préferences</string>
    <string name="title_activity_notice">NoticeActivity</string>
    <string name="title_activity_list_monument">ListMonumentActivity</string>
    <string name="title_activity_desc_Monument">Description</string>
    <string name="title_Monument_au_alentour">Monuments aux alentour</string>
    <string name="title_profil">Profil</string>
    <string name="title_activity_inscription">InscriptionActivity</string>
    <string name="title_inscription">Inscription</string>
    <string name="title_inscription_nom">entrer un pseudo</string>
    <string name="title_compte">Compte d\'utilisateur</string>
</resources>
